# MSPFCI

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: read_imu.cpp  read_sensors.cpp  read_sensors_async.cpp  send_commands.cpp
include/: defs.hpp  interface.hpp  logger.hpp  msgs.hpp  msp.hpp  periodic_callback.hpp  utils.hpp
include/mspfci/: defs.hpp  interface.hpp  msgs.hpp  msp.hpp  periodic_callback.hpp
source/: interface.cpp  msp.cpp
source/mspfci/: interface.cpp  msp.cpp
source/serial/impl/list_ports/: list_ports_linux.cc
